tests/http/snapshots/http__v2_logs__logs_zero_limit.snap
---
source: tests/http/v2_logs.rs
expression: "get(format!(\"{USER_LOGS}?{MARCH}&limit=0\")).send().await"
---
GET /api/v2/channels/11111/users/22222/logs?from=2026-03-01T00:00:00Z&to=2026-04-01T00:00:00Z&limit=0
status: 400 Bad Request
content-type: application/problem+json
---
{
  "code": "invalid_request",
  "detail": "`limit` must be at least 1",
  "status": 400,
  "title": "The request is invalid"
}
