tests/http/snapshots/http__v2_logs__random_message_of_silent_user.snap
---
source: tests/http/v2_logs.rs
expression: "get(\"/api/v2/channels/11111/users/99999/logs/random\").send().await"
---
GET /api/v2/channels/11111/users/99999/logs/random
status: 404 Not Found
content-type: application/problem+json
---
{
  "code": "not_found",
  "detail": "there are no messages to pick from",
  "status": 404,
  "title": "The requested data was not found"
}
