tests/http/snapshots/http__v2_logs__search.snap
---
source: tests/http/v2_logs.rs
expression: "get(\"/api/v2/channels/11111/users/22222/logs/search?q=HELLO\").send().await"
---
GET /api/v2/channels/11111/users/22222/logs/search?q=HELLO
status: 200 OK
content-type: application/json
cache-control: no-cache
---
{
  "messages": [
    {
      "displayName": "Alice",
      "id": "00000000-0000-0000-0000-000000000001",
      "tags": {
        "badge-info": "",
        "badges": "subscriber/12",
        "color": "#FF0000",
        "display-name": "Alice",
        "emotes": "",
        "flags": "",
        "id": "00000000-0000-0000-0000-000000000001",
        "room-id": "11111",
        "subscriber": "1",
        "tmi-sent-ts": "1772348400000",
        "user-id": "22222",
        "user-type": ""
      },
      "text": "hello world",
      "timestamp": "2026-03-01T07:00:00Z"
    },
    {
      "displayName": "Alice",
      "id": "00000000-0000-0000-0000-000000000003",
      "tags": {
        "badge-info": "",
        "badges": "subscriber/12",
        "color": "#FF0000",
        "display-name": "Alice",
        "emotes": "",
        "flags": "",
        "id": "00000000-0000-0000-0000-000000000003",
        "room-id": "11111",
        "subscriber": "1",
        "tmi-sent-ts": "1772355600000",
        "user-id": "22222",
        "user-type": ""
      },
      "text": "hello again",
      "timestamp": "2026-03-01T09:00:00Z"
    }
  ]
}
